added swagger docs
