# server/index.js
@@ -31,7 +31,7 @@ app.post("/measurements", async(req, res) => {
         Swagger Documentation:
         #swagger.method = 'post'
         #swagger.tags = ['Measurements']
-        #swagger.description = 'Endpoint to upload sensor data.'
+        #swagger.description = 'Endpoint to upload a single measurement.'
         #swagger.parameters['sensorData'] = {
             in: 'body',
             description: 'Measurement from sensor box',
@@ -60,23 +60,22 @@ app.post("/measurements/multiple", async(req, res) => {
         Swagger Documentation:
         #swagger.method = 'post'
         #swagger.tags = ['Measurements']
-        #swagger.description = 'Endpoint to upload sensor data.'
-        #swagger.parameters['sensorData'] = {
+        #swagger.description = 'Add nested jsons to send multiple measurements.'
+        #swagger.parameters['measurements'] = {
             in: 'body',
-            description: 'Measurement from sensor box',
+            description: 'multiple measurements from sensor box',
             required: true,
             type: 'object',
-            schema: {$ref: "#/definitions/NewMeasurement"}
+            schema: {$ref: "#/definitions/MultipleMeasures"}
         }
     */
-   console.log("oyyyy");
     try {
         console.log(req.body);
         let measure_count = 0;
         const measurements = req.body;
         var newMeasurement;
         for (key in req.body){
-            console.log(measurements[key]);
+            //console.log(measurements[key]);
             newMeasurement = await pool.query(
                 "INSERT INTO measurements (temperature, humidity, wind, noise_level, voltage) \
                 VALUES ($1, $2, $3, $4, $5)", [measurements[key].temperature, measurements[key].humidity,
